# aquatic

.github/workflows/: mayhem.yml
aquatic_common/: Cargo.toml
aquatic_common/src/: lib.rs
aquatic_udp/: Cargo.toml
aquatic_udp/fuzz/: Cargo.toml
aquatic_udp/fuzz/fuzz_targets/: handle_requests.rs  pending_scrape_response_slab.rs
aquatic_udp/src/: common.rs
aquatic_udp/src/workers/socket/: mod.rs  storage.rs
aquatic_udp/src/workers/swarm/: mod.rs
aquatic_udp_protocol/: Cargo.toml
aquatic_udp_protocol/fuzz/: Cargo.toml
aquatic_udp_protocol/fuzz/fuzz_targets/: udp_roundtrip.rs
aquatic_udp_protocol/src/: common.rs  request.rs
mayhem/: Dockerfile  handle_requests.mayhemfile  pending_scrape_response_slab.mayhemfile  udp_roundtrip.mayhemfile
